k8s/ingress/demo-haproxy.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-haproxy
  namespace: ingress-compare
spec:
  ingressClassName: haproxy
  rules:
    - host: demo.haproxy.lab.origemite.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: demo-echo
                port:
                  number: 80
