k8s/ingress/demo-kong.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-kong
  namespace: ingress-compare
spec:
  ingressClassName: kong
  rules:
    - host: demo.kong.lab.origemite.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: demo-echo
                port:
                  number: 80
