k8s/ingress/demo-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-nginx
  namespace: ingress-compare
spec:
  ingressClassName: nginx
  rules:
    - host: demo.nginx.lab.origemite.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: demo-echo
                port:
                  number: 80
