k8s/ingress/lab.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lab
  namespace: nginx
spec:
  ingressClassName: nginx
  rules:
    - host: "*.lab.origemite.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx
                port:
                  number: 80
