k8s/ingress/rabbitmq.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rabbitmq
  namespace: rabbitmq
spec:
  ingressClassName: nginx
  rules:
    - host: rabbitmq.nginx.lab.origemite.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rabbitmq
                port:
                  number: 15672
